# entities-failover

./: .gitignore  AGENTS.md  README.md  hacs.json  pyproject.toml
custom_components/entity_failover/: __init__.py  adapters.py  air_quality.py  alarm_control_panel.py  binary_sensor.py  button.py  calendar.py  camera.py  climate.py  config_flow.py  const.py  cover.py  date.py  datetime.py  device_tracker.py  diagnostics.py  entity.py  fan.py  helpers.py  humidifier.py  image.py  lawn_mower.py  learning.py  light.py  lock.py  manager.py  manifest.json  media_player.py  model.py  number.py  platform.py  remote.py  scene.py  select.py  sensor.py  services.yaml  siren.py  switch.py  text.py  time.py  (+6 more)
custom_components/entity_failover/entities/: __init__.py  base.py  diagnostics.py  domains.py  routing.py
custom_components/entity_failover/entities/domain_contracts/: __init__.py  camera.py  climate.py  common.py  light.py  media.py  position.py  security.py  sensor.py  simple.py  specialized.py  value.py
custom_components/entity_failover/entities/routes/: __init__.py  climate.py  fan.py  media.py  position.py  simple.py  specialized.py  toggle.py  vacuum.py
custom_components/entity_failover/translations/: en.json  fr.json
tests/: conftest.py  test_adapters.py  test_adapters_refactored.py  test_config_flow.py  test_manager.py  test_metadata.py  test_setup.py
