[project]
name = "entity-failover"
version = "0.1.0"
description = "Home Assistant custom integration for synthetic failover entities"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = []

[project.optional-dependencies]
test = [
  "homeassistant>=2026.6.0",
  "pytest-homeassistant-custom-component>=0.13.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["A", "ASYNC", "B", "C4", "E", "F", "I", "N", "PL", "RUF", "UP", "W"]
ignore = ["PLR0913", "PLR0915", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

